[package]
name = "morton-table"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5"
rayon = "1"

[dev-dependencies]
criterion = "0.3"
rand = { version="0.7", features=["small_rng"] }

[[bench]]
name = "quadtree_benches"
harness = false
